--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -8,8 +8,11 @@ RUN apt-get update && \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
-    libxrender-dev && \
-    apt-get clean && \
+    libxrender-dev \
+    openssh-client \
+    netcat-openbsd \
+    dos2unix \
+    && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir --upgrade pip && \
@@ -25,6 +28,16 @@ COPY . .
 
 RUN poetry install --no-interaction --no-ansi
 
+# Create mpiuser and .ssh directory for SSH keys
+RUN useradd -m -s /bin/bash mpiuser && \
+    mkdir -p /home/mpiuser/.ssh && \
+    chown -R mpiuser:mpiuser /home/mpiuser/.ssh && \
+    chmod 700 /home/mpiuser/.ssh
+
+# Copy and setup entrypoint script
+COPY entrypoint.sh /entrypoint.sh
+RUN dos2unix /entrypoint.sh && chmod +x /entrypoint.sh
+
 EXPOSE 8000
 
-CMD ["uvicorn", "src.api:app", "--host", "0.0.0.0", "--port", "8000"]
+ENTRYPOINT ["/entrypoint.sh"]
