feat: Implementar consumer de RabbitMQ en nodo maestro MPI
Integración del gestor de colas RabbitMQ con el nodo maestro para
procesamiento distribuido de trabajos de video.

Cambios principales:
- Crear consumer en C (rabbitmq_consumer.c) que escucha cola 'video_jobs'
- Parseo de mensajes JSON con cJSON para extraer job_id, video_path y task
- Modificar Dockerfile para instalar librerías: librabbitmq-dev, libcjson-dev
- Actualizar init-ssh.sh para iniciar consumer solo en nodo maestro
- Agregar logging detallado en /var/log/rabbitmq_consumer.log
- Documentar contrato de mensajes en MENSAJE_RABBITMQ_CONTRACT.md

El consumer se conecta automáticamente al iniciar el contenedor master,
espera mensajes de la cola y parsea la información para preparar la
ejecución de trabajos MPI (actualmente muestra el comando, pendiente
de ejecutar mpirun).

--- a/mpi/Dockerfile
+++ b/mpi/Dockerfile
@@ -12,6 +12,11 @@ RUN apt-get update && apt-get install -y \
     libopencv-dev \
     ffmpeg \
     dos2unix \
+    librabbitmq-dev \
+    libcurl4-openssl-dev \
+    libcjson-dev \
+    pkg-config \
+    netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
 RUN mkdir /var/run/sshd
@@ -29,6 +34,12 @@ RUN mkdir -p /home/mpiuser/.ssh && \
 
 COPY init-ssh.sh /usr/local/bin/init-ssh.sh
 RUN dos2unix /usr/local/bin/init-ssh.sh && chmod +x /usr/local/bin/init-ssh.sh
+
+# Copiar y compilar el consumer de RabbitMQ
+COPY rabbitmq_consumer.c /tmp/rabbitmq_consumer.c
+RUN gcc -o /usr/local/bin/rabbitmq_consumer /tmp/rabbitmq_consumer.c -lrabbitmq -lcjson && \
+    chmod +x /usr/local/bin/rabbitmq_consumer && \
+    rm /tmp/rabbitmq_consumer.c
 
 WORKDIR /home/mpiuser/project
 
