set up process_video

--- a/mpi/Dockerfile
+++ b/mpi/Dockerfile
@@ -35,12 +35,21 @@ RUN mkdir -p /home/mpiuser/.ssh && \
 COPY init-ssh.sh /usr/local/bin/init-ssh.sh
 RUN dos2unix /usr/local/bin/init-ssh.sh && chmod +x /usr/local/bin/init-ssh.sh
 
+RUN mkdir /var/log/mpi_jobs && chown mpiuser:mpiuser /var/log/mpi_jobs && chmod 755 /var/log/mpi_jobs
+
 # Copiar y compilar el consumer de RabbitMQ
-COPY rabbitmq_consumer.c /tmp/rabbitmq_consumer.c
+COPY src/rabbitmq_consumer.c /tmp/rabbitmq_consumer.c
 RUN gcc -o /usr/local/bin/rabbitmq_consumer /tmp/rabbitmq_consumer.c -lrabbitmq -lcjson && \
     chmod +x /usr/local/bin/rabbitmq_consumer && \
     rm /tmp/rabbitmq_consumer.c
 
-WORKDIR /home/mpiuser/project
+# Copiar y compilar process_video con mpicc
+COPY src/process_video.c /tmp/process_video.c
+RUN mpicc -o /usr/local/bin/process_video /tmp/process_video.c -lopencv_core -lopencv_imgcodecs -lopencv_imgproc -lopencv_videoio && \
+    chmod +x /usr/local/bin/process_video && \
+    rm /tmp/process_video.c
 
-CMD ["/usr/local/bin/init-ssh.sh"]
+USER mpiuser
+WORKDIR /home/mpiuser
+
+CMD ["/bin/bash", "-c", "/usr/local/bin/init-ssh.sh && sudo /usr/sbin/sshd -D"]
