--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,11 @@ services:
       - "5432:5432"
     networks:
       - my_net
+    healthcheck:                              # ← AGREGAR BLOQUE COMPLETO
+      test: ["CMD-SHELL", "pg_isready -U dbuser"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   minio:
     image: minio/minio
@@ -124,6 +129,8 @@ services:
     depends_on:
       ssh-keygen:
         condition: service_completed_successfully
+      postgres:
+        condition: service_healthy
       rabbitmq:
         condition: service_started
       minio:
