--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ x-common-service: &mpi-common
     dockerfile: Dockerfile
   volumes:
     - ssh-keys:/ssh-shared:rw
-    - video-cache:/video-cache:rw
+    - ./mpi/src:/mpi/src:rw
+    - video-temp:/tmp:rw
   networks:
     - my_net
 
@@ -143,7 +144,7 @@ services:
 
 volumes:
   ssh-keys:
-  video-cache:
+  video-temp:
 
 networks:
   my_net:
